# eda_graduados_eso_tic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: Dataset_INE_Graduados_ESO_43698.csv
notebooks/: eda_graduados_eso_tic.ipynb
reports/: Informe_Ejecutivo.md  executive_report.md  executive_report.txt  hypothesis_tests.md  quality_checks.md
reports/maps/: mapa_espana_habilidades_tic.html  mapa_tic_experto_ccaa.html
reports/quality/: inconsistencias_pct.csv
reports/tables/: anova_centros_datos.csv  biv_centro_medias.csv  biv_corr_matrix.csv  biv_sexo_medias.csv  biv_top5_brecha.csv  biv_top5_experto.csv  chi2_ccaa_nivel_tic_contingencia.csv  chi2_df_total_datos.csv  media_experto_por_ccaa.csv  t_centro_datos.csv  t_genero_datos.csv  top3_ccaa_brecha.csv  top3_ccaa_experto.csv  univariado_estadisticas.csv
src/eda_eso_tic/: data_utils.py  main.py  paths.py
