[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-graduados-eso-tic"
version = "0.1.0"
description = "EDA Graduados en ESO · Habilidades TIC (INE 43698)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GHalfbbt" }]

# TODO en el bloque principal (sin extras)
dependencies = [
  # runtime EDA
  "pandas>=2.2,<3",
  "numpy>=2.0,<3",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "plotly>=5.20,<6",
  "folium>=0.16,<1",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "requests>=2.31,<3",
  "reportlab>=4,<5",
  # notebooks y ejecución programática
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "nbconvert>=7.16",
  "papermill>=2.6",
  # exportar imágenes estáticas de Plotly (opcional, pero útil)
  "kaleido>=0.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","I"]
